--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.qingfei.test</groupId>
     <artifactId>test-hook</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <properties>
         <scm.trunk.url>git@github.com:qingfei1994/test-hook.git</scm.trunk.url>
     </properties>
     <scm>
         <developerConnection>scm:git:${scm.trunk.url}</developerConnection>
         <url>scm:git:${scm.trunk.url}</url>
-        <tag>HEAD</tag>
+        <tag>test-hook-1.0</tag>
     </scm>
     <build>
         <plugins>
