--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 
     <groupId>org.qingfei.test</groupId>
     <artifactId>test-hook</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <properties>
         <scm.trunk.url>git@github.com:qingfei1994/test-hook.git</scm.trunk.url>
     </properties>
     <scm>
         <developerConnection>scm:git:${scm.trunk.url}</developerConnection>
         <url>scm:git:${scm.trunk.url}</url>
-        <tag>test-hook-1.0</tag>
+        <tag>HEAD</tag>
     </scm>
     <build>
         <plugins>
